app/assets/stylesheets/application.scss
@import "materialize";
// @import "materialize/extras/nouislider";
@import "https://fonts.googleapis.com/icon?family=Material+Icons";
@import "https://fonts.googleapis.com/css?family=Fredericka+the+Great";

.image-splash {
  padding: 40px;
  height: 100%;
  width: 100%;
  vertical-align: bottom;
  min-height: 850px;
  background-size: cover;
  background-position: top;
  background-image: url("https://www.homeadvisor.com/images/consumer/hhi/hero-photos/city/SanFrancisco.jpg");
}

.splash-login-container {
  text-align: center;
  z-index: 1000;
  margin: auto;
}

.login-container {
  position: relative;
  width: 30%;
  text-align: center;
  left: 34%;
  top: 150px;
}

.splash-text {
  position: relative;
  bottom: 60px;
}

.delete-button {
  background-color: red;
}

.new-post {
  margin-top: 15px;
}

.post-container {
  text-align: center;
}

.flash-msg {
  text-align: center;
  position: relative;
  right: 5%;
  color: black;
}

.post-index {
  width: 70%;
  height: 20%;
  position: relative;
  left: 15%;
  // font-size: 20px !important;
}

.post-home {
  width: 70%;
  position: relative;
  left: 15%;
}

.manip-buttons {
  position: relative;
  // left: 21%;
  // bottom: 140px;
  display: block;
  text-align: center;
}

.edit-button {
  position: relative;
  left: 5%;
}

.post-content {
  position: relative;
  // left: 17%;
  bottom: 30px;
}

.back-button {
  position: relative;
  top: 10px;
}

.media-body {
  // border: 1px solid black;
  word-wrap: break-word;
  // position: relative;
  // left: 30%;
  // bottom: 40px;
  // width: 40%;
}

.post-title {
  position: relative;
  padding-bottom: 15px;
  word-wrap: break-word;
}

.show-images {
  // position: relative;
  // left: 17%;
  display: block;
  text-align: center;
}

.add-image {
  display: block;
  text-align: center;
  padding-top: 20px;
}

.uploaded-show {
  position: relative;
  left: 8%;
}

.show-content {
  position: relative;
}

.show-content2 {
  position: relative;
  top: 90px;
}

.new-post-button {
  position: relative;
  left: 41%;
}

.show-background {
  height: 800px;
}

.show-map {
  // position: relative;
  // left: 8%;
  // bottom: 160px;
}

.issue-support {
  padding-bottom: 20px;
}

.post-content2 {
  // position: relative;
  // left: 17%;
  // bottom: 160px;
}

.uploaded-show2 {
  position: relative;
  left: 8%;
}

.show-map2 {
  // position: relative;
  // left: 6%;
  // bottom: 80px;
}

.issue-support2 {
  position: relative;
  left: 1%;
  top: 30px;
  padding: 60px;
}

.zoomed {
  zoom: 1.07;
  -moz-transform: scale(3);
  -moz-transform-origin: 0 0;
}

.google-map {
  display: block;
  text-align: center;
}

.user-img {
  height: auto;
  width: 180%;
  // padding-bottom: 50px;
}

